@@ -46,30 +46,101 @@
  * @param p0 the result (number 1 if true; unchanged otherwise)
  * @param p1 the left model
  * @param p2 the right model
- * @param p3 the index
- * @param p4 the count
+ * @param p3 the operation abstraction
+ * @param p4 the deep comparison flag (number 0 for shallow comparison; number 1 for deep comparison)
+ */
+void compare_model_models_deep_elements(void* p0, void* p1, void* p2, void* p3, void* p4) {
+}
+
+/**
+ * Compares left and right model.
+ *
+ * @param p0 the result (number 1 if true; unchanged otherwise)
+ * @param p1 the left model
+ * @param p2 the right model
+ * @param p3 the operation abstraction
+ * @param p4 the deep comparison flag (number 0 for shallow comparison; number 1 for deep comparison)
+ */
+void compare_model_models_deep(void* p0, void* p1, void* p2, void* p3, void* p4) {
+}
+
+/**
+ * Compares left and right model.
+ *
+ * @param p0 the result (number 1 if true; unchanged otherwise)
+ * @param p1 the left model
+ * @param p2 the right model
+ * @param p3 the operation abstraction
+ * @param p4 the operand abstraction
+ * @param p5 the deep comparison flag (number 0 for shallow comparison; number 1 for deep comparison)
+ */
+void compare_model_models(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5) {
+
+    if (p4 != *NULL_POINTER_MEMORY_MODEL) {
+
+        int* d = (int*) p4;
+
+        // The shallow, deep comparison results.
+        int sr = *NUMBER_0_INTEGER_MEMORY_MODEL;
+        int dr = *NUMBER_0_INTEGER_MEMORY_MODEL;
+
+        // Compare left- with right model (shallow).
+        compare_item((void*) &sr, p1, p2, p3, p4);
+
+        if (*r != *NUMBER_0_INTEGER_MEMORY_MODEL) {
+
+            if (*d != *NUMBER_0_INTEGER_MEMORY_MODEL) {
+
+                // Deep comparison.
+
+                // Compare left- with right model elements (deep).
+                compare_model_elements((void*) &mdr, lm, rm, p3, p4);
+
+                // Both, the shallow- and the deep comparison have to be successful.
+                if ((msr != *NUMBER_0_INTEGER_MEMORY_MODEL) && (mdr != *NUMBER_0_INTEGER_MEMORY_MODEL)) {
+
+                    // Set result to true only if all comparisons have been true.
+                    set_array(p0, (void*) NUMBER_1_INTEGER_MEMORY_MODEL, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, (void*) INTEGER_MEMORY_ABSTRACTION, (void*) INTEGER_MEMORY_ABSTRACTION_COUNT);
+                }
+            }
+        }
+
+    } else {
+
+        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not compare model models. The deep comparison flag is null.");
+    }
+}
+
+/**
+ * Compares left and right model.
+ *
+ * @param p0 the result (number 1 if true; unchanged otherwise)
+ * @param p1 the left model
+ * @param p2 the right model
+ * @param p3 the operation abstraction
+ * @param p4 the deep comparison flag (number 0 for shallow comparison; number 1 for deep comparison)
  */
 void compare_model(void* p0, void* p1, void* p2, void* p3, void* p4) {
 
     log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Compare model.");
 
-    // CAUTION! The names do NOT have to be identical.
+    // CAUTION! The names do NOT have to be compared.
     // They are only used for identification within their corresponding whole model.
 
-    // The left names, abstractions, models, details.
+    // The left abstractions, models, details.
     void* la = *NULL_POINTER_MEMORY_MODEL;
     void* lm = *NULL_POINTER_MEMORY_MODEL;
     void* ld = *NULL_POINTER_MEMORY_MODEL;
-    // The right names, abstractions, models, details.
+    // The right abstractions, models, details.
     void* ra = *NULL_POINTER_MEMORY_MODEL;
     void* rm = *NULL_POINTER_MEMORY_MODEL;
     void* rd = *NULL_POINTER_MEMORY_MODEL;
 
-    // Get left names, abstractions, models, details.
+    // Get left abstractions, models, details.
     get((void*) &la, p1, (void*) ABSTRACTIONS_MODEL_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
     get((void*) &lm, p1, (void*) MODELS_MODEL_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
     get((void*) &ld, p1, (void*) DETAILS_MODEL_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
-    // Get right names, abstractions, models, details.
+    // Get right abstractions, models, details.
     get((void*) &ra, p2, (void*) ABSTRACTIONS_MODEL_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
     get((void*) &rm, p2, (void*) MODELS_MODEL_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
     get((void*) &rd, p2, (void*) DETAILS_MODEL_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
@@ -82,31 +153,37 @@ void compare_model(void* p0, void* p1, void* p2, void* p3, void* p4) {
     get((void*) &rad, ra, (void*) DATA_ITEM_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
     get((void*) &rac, ra, (void*) COUNT_ITEM_MEMORY_NAME, (void*) POINTER_MEMORY_ABSTRACTION, (void*) POINTER_MEMORY_ABSTRACTION_COUNT);
 
+    // The primitive operand abstraction.
+    int a = *NUMBER_MINUS_1_INTEGER_MEMORY_MODEL;
+
+    // Decode primitive abstraction.
+    // CAUTION! The right model's abstraction is used here,
+    // but the left model's abstraction may be used as well.
+    decode_primitive_abstraction((void*) &a, rad, rac);
+
     // The abstractions, models, details comparison results.
     int ar = *NUMBER_0_INTEGER_MEMORY_MODEL;
     int mr = *NUMBER_0_INTEGER_MEMORY_MODEL;
     int dr = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
-    //
-    // Compare left- with right model.
-    //
-
-    // Compare abstractions.
-    compare_item((void*) &ar, la, ra, p3, p4, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION_COUNT);
+    // Compare left- with right abstraction.
+    compare_item((void*) &ar, la, ra, (void*) EQUAL_PRIMITIVE_OPERATION_ABSTRACTION, (void*) WIDE_CHARACTER_PRIMITIVE_MEMORY_ABSTRACTION);
 
     if (ar != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
-        // Compare models.
-        // The right model's abstraction is used here,
-        // but the left model's abstraction may be used as well.
-        compare_item((void*) &mr, lm, rm, p3, p4, rad, rac);
+        // Compare left- with right details.
+        // This function returns "true" in case both details are empty.
+        compare_item((void*) &dr, ld, rd, (void*) EQUAL_PRIMITIVE_OPERATION_ABSTRACTION, (void*) MODEL_PRIMITIVE_MEMORY_ABSTRACTION);
 
-        if (mr != *NUMBER_0_INTEGER_MEMORY_MODEL) {
+        if (dr != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
-            // Compare details.
-            compare_item((void*) &dr, ld, rd, p3, p4, (void*) MODEL_MEMORY_ABSTRACTION, (void*) MODEL_MEMORY_ABSTRACTION_COUNT);
+            // Compare left- with right model.
+            compare_model_models((void*) &mr, lm, rm, p3, p4, (void*) &a);
 
-            if (dr != *NUMBER_0_INTEGER_MEMORY_MODEL) {
+            // Count the tree depth here!
+            // Only set p0 below, if root level has been reached again!
+
+            if (mr != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
                 // Set result to true only if all comparisons have been true.
                 set_array(p0, (void*) NUMBER_1_INTEGER_MEMORY_MODEL, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, (void*) INTEGER_MEMORY_ABSTRACTION, (void*) INTEGER_MEMORY_ABSTRACTION_COUNT);
