@@ -16,6 +16,10 @@
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
+2011-05-03  Christian Heller  <christian.heller@tuxtax.de>
+
+        * Prepare shallow and deep comparison in "executor/comparator/"
+
 2011-05-02  Christian Heller  <christian.heller@tuxtax.de>
 
         * Continue new files and delete old ones in "executor/comparator/"
